seaqt/QtGui/gen_qcolor.nim


proc fcQColor_operatorAssign(self: pointer, param1: pointer): void {.importc: "QColor_operatorAssign".}
proc fcQColor_operatorAssignWithColor(self: pointer, color: cint): void {.importc: "QColor_operatorAssignWithColor".}
proc fcQColor_isValid(self: pointer, ): bool {.importc: "QColor_isValid".}
proc fcQColor_name(self: pointer, ): struct_miqt_string {.importc: "QColor_name".}
proc fcQColor_nameWithFormat(self: pointer, format: cint): struct_miqt_string {.importc: "QColor_nameWithFormat".}
proc fcQColor_setNamedColor(self: pointer, name: struct_miqt_string): void {.importc: "QColor_setNamedColor".}
proc fcQColor_colorNames(): struct_miqt_array {.importc: "QColor_colorNames".}
proc fcQColor_spec(self: pointer, ): cint {.importc: "QColor_spec".}
proc fcQColor_alpha(self: pointer, ): cint {.importc: "QColor_alpha".}
proc fcQColor_setAlpha(self: pointer, alpha: cint): void {.importc: "QColor_setAlpha".}
proc fcQColor_alphaF(self: pointer, ): float64 {.importc: "QColor_alphaF".}
proc fcQColor_setAlphaF(self: pointer, alpha: float64): void {.importc: "QColor_setAlphaF".}
proc fcQColor_red(self: pointer, ): cint {.importc: "QColor_red".}
proc fcQColor_green(self: pointer, ): cint {.importc: "QColor_green".}
proc fcQColor_blue(self: pointer, ): cint {.importc: "QColor_blue".}
proc fcQColor_setRed(self: pointer, red: cint): void {.importc: "QColor_setRed".}
proc fcQColor_setGreen(self: pointer, green: cint): void {.importc: "QColor_setGreen".}
proc fcQColor_setBlue(self: pointer, blue: cint): void {.importc: "QColor_setBlue".}
proc fcQColor_redF(self: pointer, ): float64 {.importc: "QColor_redF".}
proc fcQColor_greenF(self: pointer, ): float64 {.importc: "QColor_greenF".}
proc fcQColor_blueF(self: pointer, ): float64 {.importc: "QColor_blueF".}
proc fcQColor_setRedF(self: pointer, red: float64): void {.importc: "QColor_setRedF".}
proc fcQColor_setGreenF(self: pointer, green: float64): void {.importc: "QColor_setGreenF".}
proc fcQColor_setBlueF(self: pointer, blue: float64): void {.importc: "QColor_setBlueF".}
proc fcQColor_getRgb(self: pointer, r: ptr cint, g: ptr cint, b: ptr cint): void {.importc: "QColor_getRgb".}
proc fcQColor_setRgb(self: pointer, r: cint, g: cint, b: cint): void {.importc: "QColor_setRgb".}
proc fcQColor_getRgbF(self: pointer, r: ptr float64, g: ptr float64, b: ptr float64): void {.importc: "QColor_getRgbF".}
proc fcQColor_setRgbF(self: pointer, r: float64, g: float64, b: float64): void {.importc: "QColor_setRgbF".}
proc fcQColor_rgba64(self: pointer, ): pointer {.importc: "QColor_rgba64".}
proc fcQColor_setRgba64(self: pointer, rgba: pointer): void {.importc: "QColor_setRgba64".}
proc fcQColor_rgba(self: pointer, ): cuint {.importc: "QColor_rgba".}
proc fcQColor_setRgba(self: pointer, rgba: cuint): void {.importc: "QColor_setRgba".}
proc fcQColor_rgb(self: pointer, ): cuint {.importc: "QColor_rgb".}
proc fcQColor_setRgbWithRgb(self: pointer, rgb: cuint): void {.importc: "QColor_setRgbWithRgb".}
proc fcQColor_hue(self: pointer, ): cint {.importc: "QColor_hue".}
proc fcQColor_saturation(self: pointer, ): cint {.importc: "QColor_saturation".}
proc fcQColor_hsvHue(self: pointer, ): cint {.importc: "QColor_hsvHue".}
proc fcQColor_hsvSaturation(self: pointer, ): cint {.importc: "QColor_hsvSaturation".}
proc fcQColor_value(self: pointer, ): cint {.importc: "QColor_value".}
proc fcQColor_hueF(self: pointer, ): float64 {.importc: "QColor_hueF".}
proc fcQColor_saturationF(self: pointer, ): float64 {.importc: "QColor_saturationF".}
proc fcQColor_hsvHueF(self: pointer, ): float64 {.importc: "QColor_hsvHueF".}
proc fcQColor_hsvSaturationF(self: pointer, ): float64 {.importc: "QColor_hsvSaturationF".}
proc fcQColor_valueF(self: pointer, ): float64 {.importc: "QColor_valueF".}
proc fcQColor_getHsv(self: pointer, h: ptr cint, s: ptr cint, v: ptr cint): void {.importc: "QColor_getHsv".}
proc fcQColor_setHsv(self: pointer, h: cint, s: cint, v: cint): void {.importc: "QColor_setHsv".}
proc fcQColor_getHsvF(self: pointer, h: ptr float64, s: ptr float64, v: ptr float64): void {.importc: "QColor_getHsvF".}
proc fcQColor_setHsvF(self: pointer, h: float64, s: float64, v: float64): void {.importc: "QColor_setHsvF".}
proc fcQColor_cyan(self: pointer, ): cint {.importc: "QColor_cyan".}
proc fcQColor_magenta(self: pointer, ): cint {.importc: "QColor_magenta".}
proc fcQColor_yellow(self: pointer, ): cint {.importc: "QColor_yellow".}
proc fcQColor_black(self: pointer, ): cint {.importc: "QColor_black".}
proc fcQColor_cyanF(self: pointer, ): float64 {.importc: "QColor_cyanF".}
proc fcQColor_magentaF(self: pointer, ): float64 {.importc: "QColor_magentaF".}
proc fcQColor_yellowF(self: pointer, ): float64 {.importc: "QColor_yellowF".}
proc fcQColor_blackF(self: pointer, ): float64 {.importc: "QColor_blackF".}
proc fcQColor_getCmyk(self: pointer, c: ptr cint, m: ptr cint, y: ptr cint, k: ptr cint): void {.importc: "QColor_getCmyk".}
proc fcQColor_getCmyk2(self: pointer, c: ptr cint, m: ptr cint, y: ptr cint, k: ptr cint): void {.importc: "QColor_getCmyk2".}
proc fcQColor_setCmyk(self: pointer, c: cint, m: cint, y: cint, k: cint): void {.importc: "QColor_setCmyk".}
proc fcQColor_getCmykF(self: pointer, c: ptr float64, m: ptr float64, y: ptr float64, k: ptr float64): void {.importc: "QColor_getCmykF".}
proc fcQColor_getCmykF2(self: pointer, c: ptr float64, m: ptr float64, y: ptr float64, k: ptr float64): void {.importc: "QColor_getCmykF2".}
proc fcQColor_setCmykF(self: pointer, c: float64, m: float64, y: float64, k: float64): void {.importc: "QColor_setCmykF".}
proc fcQColor_hslHue(self: pointer, ): cint {.importc: "QColor_hslHue".}
proc fcQColor_hslSaturation(self: pointer, ): cint {.importc: "QColor_hslSaturation".}
proc fcQColor_lightness(self: pointer, ): cint {.importc: "QColor_lightness".}
proc fcQColor_hslHueF(self: pointer, ): float64 {.importc: "QColor_hslHueF".}
proc fcQColor_hslSaturationF(self: pointer, ): float64 {.importc: "QColor_hslSaturationF".}
proc fcQColor_lightnessF(self: pointer, ): float64 {.importc: "QColor_lightnessF".}
proc fcQColor_getHsl(self: pointer, h: ptr cint, s: ptr cint, l: ptr cint): void {.importc: "QColor_getHsl".}
proc fcQColor_setHsl(self: pointer, h: cint, s: cint, l: cint): void {.importc: "QColor_setHsl".}
proc fcQColor_getHslF(self: pointer, h: ptr float64, s: ptr float64, l: ptr float64): void {.importc: "QColor_getHslF".}
proc fcQColor_setHslF(self: pointer, h: float64, s: float64, l: float64): void {.importc: "QColor_setHslF".}
proc fcQColor_toRgb(self: pointer, ): pointer {.importc: "QColor_toRgb".}
proc fcQColor_toHsv(self: pointer, ): pointer {.importc: "QColor_toHsv".}
proc fcQColor_toCmyk(self: pointer, ): pointer {.importc: "QColor_toCmyk".}
proc fcQColor_toHsl(self: pointer, ): pointer {.importc: "QColor_toHsl".}
proc fcQColor_toExtendedRgb(self: pointer, ): pointer {.importc: "QColor_toExtendedRgb".}
proc fcQColor_convertTo(self: pointer, colorSpec: cint): pointer {.importc: "QColor_convertTo".}
proc fcQColor_fromRgb(rgb: cuint): pointer {.importc: "QColor_fromRgb".}
proc fcQColor_fromRgba(rgba: cuint): pointer {.importc: "QColor_fromRgba".}
proc fcQColor_fromRgb2(r: cint, g: cint, b: cint): pointer {.importc: "QColor_fromRgb2".}
proc fcQColor_fromRgbF(r: float64, g: float64, b: float64): pointer {.importc: "QColor_fromRgbF".}
proc fcQColor_fromRgba64(r: cushort, g: cushort, b: cushort): pointer {.importc: "QColor_fromRgba64".}
proc fcQColor_fromRgba64WithRgba(rgba: pointer): pointer {.importc: "QColor_fromRgba64WithRgba".}
proc fcQColor_fromHsv(h: cint, s: cint, v: cint): pointer {.importc: "QColor_fromHsv".}
proc fcQColor_fromHsvF(h: float64, s: float64, v: float64): pointer {.importc: "QColor_fromHsvF".}
proc fcQColor_fromCmyk(c: cint, m: cint, y: cint, k: cint): pointer {.importc: "QColor_fromCmyk".}
proc fcQColor_fromCmykF(c: float64, m: float64, y: float64, k: float64): pointer {.importc: "QColor_fromCmykF".}
proc fcQColor_fromHsl(h: cint, s: cint, l: cint): pointer {.importc: "QColor_fromHsl".}
proc fcQColor_fromHslF(h: float64, s: float64, l: float64): pointer {.importc: "QColor_fromHslF".}
proc fcQColor_light(self: pointer, ): pointer {.importc: "QColor_light".}
proc fcQColor_dark(self: pointer, ): pointer {.importc: "QColor_dark".}
proc fcQColor_lighter(self: pointer, ): pointer {.importc: "QColor_lighter".}
proc fcQColor_darker(self: pointer, ): pointer {.importc: "QColor_darker".}
proc fcQColor_operatorEqual(self: pointer, c: pointer): bool {.importc: "QColor_operatorEqual".}
proc fcQColor_operatorNotEqual(self: pointer, c: pointer): bool {.importc: "QColor_operatorNotEqual".}
proc fcQColor_ToQVariant(self: pointer, ): pointer {.importc: "QColor_ToQVariant".}
proc fcQColor_isValidColor(name: struct_miqt_string): bool {.importc: "QColor_isValidColor".}
proc fcQColor_getRgb4(self: pointer, r: ptr cint, g: ptr cint, b: ptr cint, a: ptr cint): void {.importc: "QColor_getRgb4".}
proc fcQColor_setRgb4(self: pointer, r: cint, g: cint, b: cint, a: cint): void {.importc: "QColor_setRgb4".}
proc fcQColor_getRgbF4(self: pointer, r: ptr float64, g: ptr float64, b: ptr float64, a: ptr float64): void {.importc: "QColor_getRgbF4".}
proc fcQColor_setRgbF4(self: pointer, r: float64, g: float64, b: float64, a: float64): void {.importc: "QColor_setRgbF4".}
proc fcQColor_getHsv4(self: pointer, h: ptr cint, s: ptr cint, v: ptr cint, a: ptr cint): void {.importc: "QColor_getHsv4".}
proc fcQColor_setHsv4(self: pointer, h: cint, s: cint, v: cint, a: cint): void {.importc: "QColor_setHsv4".}
proc fcQColor_getHsvF4(self: pointer, h: ptr float64, s: ptr float64, v: ptr float64, a: ptr float64): void {.importc: "QColor_getHsvF4".}
proc fcQColor_setHsvF4(self: pointer, h: float64, s: float64, v: float64, a: float64): void {.importc: "QColor_setHsvF4".}
proc fcQColor_getCmyk5(self: pointer, c: ptr cint, m: ptr cint, y: ptr cint, k: ptr cint, a: ptr cint): void {.importc: "QColor_getCmyk5".}
proc fcQColor_getCmyk52(self: pointer, c: ptr cint, m: ptr cint, y: ptr cint, k: ptr cint, a: ptr cint): void {.importc: "QColor_getCmyk52".}
proc fcQColor_setCmyk5(self: pointer, c: cint, m: cint, y: cint, k: cint, a: cint): void {.importc: "QColor_setCmyk5".}
proc fcQColor_getCmykF5(self: pointer, c: ptr float64, m: ptr float64, y: ptr float64, k: ptr float64, a: ptr float64): void {.importc: "QColor_getCmykF5".}
proc fcQColor_getCmykF52(self: pointer, c: ptr float64, m: ptr float64, y: ptr float64, k: ptr float64, a: ptr float64): void {.importc: "QColor_getCmykF52".}
proc fcQColor_setCmykF5(self: pointer, c: float64, m: float64, y: float64, k: float64, a: float64): void {.importc: "QColor_setCmykF5".}
proc fcQColor_getHsl4(self: pointer, h: ptr cint, s: ptr cint, l: ptr cint, a: ptr cint): void {.importc: "QColor_getHsl4".}
proc fcQColor_setHsl4(self: pointer, h: cint, s: cint, l: cint, a: cint): void {.importc: "QColor_setHsl4".}
proc fcQColor_getHslF4(self: pointer, h: ptr float64, s: ptr float64, l: ptr float64, a: ptr float64): void {.importc: "QColor_getHslF4".}
proc fcQColor_setHslF4(self: pointer, h: float64, s: float64, l: float64, a: float64): void {.importc: "QColor_setHslF4".}
proc fcQColor_fromRgb4(r: cint, g: cint, b: cint, a: cint): pointer {.importc: "QColor_fromRgb4".}
proc fcQColor_fromRgbF4(r: float64, g: float64, b: float64, a: float64): pointer {.importc: "QColor_fromRgbF4".}
proc fcQColor_fromRgba644(r: cushort, g: cushort, b: cushort, a: cushort): pointer {.importc: "QColor_fromRgba644".}
proc fcQColor_fromHsv4(h: cint, s: cint, v: cint, a: cint): pointer {.importc: "QColor_fromHsv4".}
proc fcQColor_fromHsvF4(h: float64, s: float64, v: float64, a: float64): pointer {.importc: "QColor_fromHsvF4".}
proc fcQColor_fromCmyk5(c: cint, m: cint, y: cint, k: cint, a: cint): pointer {.importc: "QColor_fromCmyk5".}
proc fcQColor_fromCmykF5(c: float64, m: float64, y: float64, k: float64, a: float64): pointer {.importc: "QColor_fromCmykF5".}
proc fcQColor_fromHsl4(h: cint, s: cint, l: cint, a: cint): pointer {.importc: "QColor_fromHsl4".}
